--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="menu">
             <div class="menu-branding">
                 <!-- <div class="portrait"></div> -->
-                <img src="../assets/Profile_Pic.jpg" alt="Amine chichi" class="portrait" />
+                <img src="assets/Profile_Pic.jpg" alt="Amine chichi" class="portrait" />
             </div>
             <ul class="menu-nav">
                 <li class="nav-item current">
