--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>View My Work</title>
+    <link rel="shortcut icon" href="assets/favicone1.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
