Adding some projects

--- a/work.html
+++ b/work.html
@@ -65,11 +65,14 @@
                     <i class="fab fa-github"></i> Source code</a>
             </div>
             <div class="item">
-
                 <img src="../assets/gestion_d'ecole.png" alt="gestion_projet" />
-
                 <a href="https://github.com/xkaz99/School-management-system" class="btn-dark">
                     <i class="fas fa-book"></i> Project report</a>
+            </div>
+            <div class="item">
+                <img src="../assets/Leafter1.png" alt="Leafter Reader mobile application" />
+                <a href="https://github.com/Amine-CHICHI/Leafter" target="_blank" class="btn-dark">
+                    <i class="fab fa-github"></i> Source code</a>
             </div>
         </div>
     </main>
