--- a/about.html
+++ b/about.html
@@ -20,7 +20,6 @@
         </div>
         <nav class="menu">
             <div class="menu-branding">
-                <!-- <div class="portrait"></div> -->
                 <img src="../assets/Profile_Pic.jpg" alt="Amine chichi" class="portrait" />
             </div>
             <ul class="menu-nav">
@@ -41,44 +40,38 @@
     </header>
 
     <main id="about">
-        <h1 class="lg-heading">À propos de <span class="text-secondary">moi</span></h1>
-        <h2 class="sm-heading">Laissez-moi vous dire quelques choses ...</h2>
+        <h1 class="lg-heading">About <span class="text-secondary">me</span></h1>
+        <h2 class="sm-heading">Let me tell you a few things...</h2>
         <div class="about-info">
             <img src="../assets/Profile_Pic.jpg" alt="Amine chichi" class="bio-image" />
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
                 <p>
-                    Etant un élève ingénieur en 2ème année à l'École Nationale Supérieure d'Informatique et d'Analyse des Systèmes (ENSIAS) à Rabat, ma passion envers l'informatique ne cesse d'accroitre au fils du temps ce qui me rend performant et investi dans mes projet.
-                    Sans oublier que le travail en équipe constitue pour moi l'une des sources d'instructions et de développement personnel.
+                    Being an engineer student in his 3rd year at the National School of Computer Science and Systems Analysis (ENSIAS) in Rabat, my passion towards computer science is growing with time, which makes me perform well and invest in my projects. Without forgetting
+                    that the teamwork constitutes for me one of the sources of instructions and personal development.
                 </p>
-                <h3 class="text-secondary">Expériences professionnelles</h3>
+                <h3 class="text-secondary">Professional experience</h3>
             </div>
 
             <div class="job job-1">
                 <h3>Ingecys Solution</h3>
                 <h4 class="job-title">Front-end developper</h4>
                 <p>
-                    Réalisation d'une refonte visuelle et structurelle de l’ancien site web <br/><br/>mise en œuvre des stratégies SEO pour améliorer le référencement du site web
+                    visual and structural redesign of the old website <br /><br />implementation of SEO strategies to improve the website's ranking
 
                 </p>
             </div>
-            <!-- <div class="job job-2">
-                <h3>Portfolio Sass</h3>
-                <h4>Front-end developper</h4>
+            <div class="job job-2">
+                <h3>DXC Technology Morocco</h3>
+                <h4 class="job-title">System administrator</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, temporibus incidunt cupiditate culpa odit possimus?
+                    Development of a Logs monitoring solution for the Liferay DXP 7.2 portal using ELK Stack
+
                 </p>
             </div>
-            <div class="job job-3">
-                <h3>Ingecys-Solution</h3>
-                <h4>Front-end developper</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, temporibus incidunt cupiditate culpa odit possimus?
-                </p>
-            </div> -->
         </div>
     </main>
-    <footer id="main-footer">Copyright &copy; 2020 || Made with ❤️</footer>
+    <footer id="main-footer">Copyright &copy; 2022 || Made with ❤️</footer>
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script>
